<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/newsimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/glacial_blod"
        android:text="Sign In"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/glacial_reguler"
        android:text="Welcome Back !"
        android:textColor="#8E8E8D"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/emailRegisterInputText"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:backgroundTint="#A8A8A8"
        android:ems="10"
        android:fontFamily="@font/glacial_reguler"
        android:hint="Email"
        android:inputType="text"
        android:textColor="#999999"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/passRegisterInputText"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#A8A8A8"
        android:ems="10"
        android:fontFamily="@font/glacial_reguler"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#999999"
        android:textColorHint="#999999"
        app:layout_constraintEnd_toEndOf="@+id/emailRegisterInputText"
        app:layout_constraintStart_toStartOf="@+id/emailRegisterInputText"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterInputText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn1"
        android:fontFamily="@font/glacial_reguler"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#040404"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/passRegisterInputText"
        app:layout_constraintStart_toStartOf="@+id/passRegisterInputText"
        app:layout_constraintTop_toBottomOf="@+id/passRegisterInputText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/glacial_reguler"
            android:text="Don’t have any account?"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/goSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/glacial_blod"
            android:text=" Sign Up"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/login_success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/glacial_blod"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btnForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/passRegisterInputText"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />

    <TextView
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/glacial_blod"
        android:text="Forgot Password ?"
        android:textColor="#6C6C6C"
        app:layout_constraintEnd_toEndOf="@+id/passRegisterInputText"
        app:layout_constraintTop_toBottomOf="@+id/passRegisterInputText" />

</androidx.constraintlayout.widget.ConstraintLayout>